objects/Orders__x.object
<CustomObject>
    <description>Orders</description>
    <externalDataSource>OrderDB</externalDataSource>
    <externalName>Orders</externalName>
    <label>Orders</label>
    <pluralLabel>Orders</pluralLabel>
    <fields>
        <fullName>orderID__c</fullName>
        <description>orderID</description>
        <externalDeveloperName>orderID</externalDeveloperName>
        <label>orderID</label>
        <length>18</length>
        <referenceTo>Orders__x</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>orderDate__c</fullName>
        <description>orderDate</description>
        <externalDeveloperName>orderDate</externalDeveloperName>
        <label>orderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>customerID__c</fullName>
        <description>customerID</description>
        <externalDeveloperName>customerID</externalDeveloperName>
        <label>customerID</label>
        <length>18</length>
        <referenceTargetField>Account.Customer_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>shippedDate__c</fullName>
        <description>shippedDate</description>
        <externalDeveloperName>shippedDate</externalDeveloperName>
        <label>shippedDate</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>